components/apps/dashboard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    hajimari.io/appName: Dashboard
    hajimari.io/enable: "true"
spec:
  rules:
  - host: kubedashboard.${CLUSTER_DOMAIN}
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443      
  tls:
  - hosts:
    - kubedashboard.${CLUSTER_DOMAIN}
    secretName: kubedashboard-certificate-tls
